# AutotrainAdvanced

./: pyproject.toml
colabs/: audio_classification.ipynb  audio_detection.ipynb  audio_segmentation.ipynb  clm.ipynb  extractive_question_answering.ipynb  generic.ipynb  image_instance_segmentation.ipynb  image_regression.ipynb  image_semantic_segmentation.ipynb  object_detection.ipynb  sent_transformers.ipynb  seq2seq.ipynb  tabular.ipynb  text_classification.ipynb  text_regression.ipynb  token_classification.ipynb  vlm.ipynb
configs/image_instance_segmentation/: hub_dataset.yml  local.yml
configs/image_semantic_segmentation/: hub_dataset.yml  local.yml
docs/source/: _toctree.yml
docs/source/tasks/: audio.mdx  image_semantic_segmentation.mdx
notebooks/: audio_classification.ipynb  audio_detection.ipynb  audio_segmentation.ipynb  clm.ipynb  extractive_question_answering.ipynb  generic.ipynb  image_classification.ipynb  image_instance_segmentation.ipynb  image_regression.ipynb  image_semantic_segmentation.ipynb  object_detection.ipynb  sent_transformers.ipynb  seq2seq.ipynb  tabular.ipynb  token_classification.ipynb  vlm.ipynb
src/autotrain/: __init__.py  client.py  commands.py  dataset.py  parser.py  project.py  tasks.py  utils.py
src/autotrain/app/: api_routes.py  colab.py  db.py  models.py  params.py  training_api.py  ui_routes.py  utils.py
src/autotrain/app/templates/: index.html
src/autotrain/backends/: __init__.py  base.py  endpoints.py  ngc.py  nvcf.py  spaces.py
src/autotrain/cli/: autotrain.py  run_extractive_qa.py  run_image_instance_segmentation.py  run_image_semantic_segmentation.py  run_llm.py  run_seq2seq.py  run_setup.py  run_spacerunner.py  run_text_classification.py  run_text_regression.py  run_token_classification.py  run_tools.py  run_vlm.py  utils.py
src/autotrain/preprocessor/: __init__.py  audio.py  tabular.py  text.py  vision.py  vlm.py
src/autotrain/trainers/: common.py
src/autotrain/trainers/audio_classification/: __main__.py  dataset.py  utils.py
src/autotrain/trainers/audio_detection/: __main__.py  dataset.py  utils.py
src/autotrain/trainers/audio_segmentation/: __main__.py  dataset.py  utils.py
src/autotrain/trainers/clm/: __main__.py  callbacks.py  train_clm_default.py  utils.py
src/autotrain/trainers/extractive_question_answering/: __main__.py
src/autotrain/trainers/generic/: utils.py
src/autotrain/trainers/image_classification/: utils.py
src/autotrain/trainers/image_instance_segmentation/: __init__.py  __main__.py  dataset.py  params.py  utils.py
src/autotrain/trainers/image_regression/: __main__.py
src/autotrain/trainers/image_semantic_segmentation/: __main__.py  dataset.py  params.py  utils.py
src/autotrain/trainers/object_detection/: __main__.py
src/autotrain/trainers/sent_transformers/: __main__.py
src/autotrain/trainers/seq2seq/: __main__.py
src/autotrain/trainers/tabular/: __main__.py  utils.py
src/autotrain/trainers/text_classification/: __main__.py  utils.py
src/autotrain/trainers/text_regression/: __main__.py
src/autotrain/trainers/token_classification/: __main__.py  utils.py
