[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrain-advanced"
version = "0.8.37.dev0"
description = "HuggingFace / AutoTrain Advanced"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "HuggingFace Inc.", email = "autotrain@huggingface.co"}
]
maintainers = [
    {name = "HuggingFace Inc.", email = "autotrain@huggingface.co"}
]
requires-python = ">=3.8"
keywords = ["automl", "autonlp", "autotrain", "huggingface"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "albumentations==1.4.23",
    "datasets[vision]~=3.2.0",
    "evaluate==0.4.3",
    "ipywidgets>=8.0.0",
    "ipadic==1.0.0",
    "jiwer==3.0.5",
    "joblib==1.4.2",
    "loguru==0.7.3",
    "pandas==2.3.0",
    "nltk==3.9.1",
    "optuna==4.1.0",
    "Pillow==11.0.0",
    "sacremoses==0.1.1",
    "scikit-learn==1.6.0",
    "sentencepiece==0.2.0",
    "tqdm==4.67.1",
    "werkzeug==3.1.3",
    "xgboost==3.0.2",
    "huggingface_hub==0.33.1",
    "requests==2.32.3",
    "einops==0.8.0",
    "packaging==24.2",
    "cryptography==44.0.1",
    "nvitop==1.3.2",
    "tensorboard==2.18.0",
    "peft==0.14.0",
    "trl==0.13.0",
    "tiktoken==0.8.0",
    "transformers==4.48.0",
    "accelerate==1.2.1",
    "bitsandbytes==0.45.0; sys_platform == 'linux'",
    "rouge_score==0.1.2",
    "py7zr==0.22.0",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.4",
    "hf-transfer",
    "pyngrok==7.2.1",
    "authlib==1.4.0",
    "itsdangerous==2.2.0",
    "seqeval==1.2.2",
    "httpx==0.28.1",
    "pyyaml==6.0.2",
    "timm==1.0.12",
    "torchmetrics==1.6.0",
    "pycocotools==2.0.8",
    "sentence-transformers==3.3.1",
    "librosa==0.10.2",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8==3.7.9",
    "pytest",
]

quality = [
    "black",
    "isort",
    "flake8==3.7.9",
]

docs = [
    "recommonmark",
    "sphinx==3.1.2",
    "sphinx-markdown-tables",
    "sphinx-rtd-theme==0.4.3",
    "sphinx-copybutton",
]

client = [
    "requests",
    "loguru",
]

[project.urls]
Homepage = "https://github.com/huggingface/autotrain-advanced"
Repository = "https://github.com/huggingface/autotrain-advanced"
Documentation = "https://github.com/huggingface/autotrain-advanced"
"Source Code" = "https://github.com/huggingface/autotrain-advanced"
"Bug Tracker" = "https://github.com/huggingface/autotrain-advanced/tags"

[project.scripts]
autotrain = "autotrain.cli.autotrain:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autotrain.app" = [
    "static/logo.png",
    "static/scripts/fetch_data_and_update_models.js",
    "static/scripts/listeners.js",
    "static/scripts/utils.js",
    "static/scripts/poll.js",
    "static/scripts/logs.js",
    "templates/index.html",
    "templates/error.html",
    "templates/duplicate.html",
    "templates/login.html",
]

# Code quality tools configuration
[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 119
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]
per-file-ignores = [
    "__init__.py = F401, E402",
    "src/autotrain/params.py = F401",
]
